--- a/_posts/2022-01-01-Libreria.md
+++ b/_posts/2022-01-01-Libreria.md
@@ -74,7 +74,7 @@ un mismo libro tiene precios diferentes en papel y en formato ebook.
 
 - De los `autores `nos interesa almacenar el DNI,nombre, apellidos, dirección.
 Además debemos almacenar los datos de su residencia ( localidad, provincia, CCAA con
-información adicional) y url de su página web. Tambien los Royalties que puede obtener (rangos
+información adicional) y url de su página web. Tambien los `Royalties` que puede obtener (rangos
 bajo - medio)
 
 - La tienda online dispondrá de varios `almacenes`, de cada uno guardaremos un identificador,
@@ -103,21 +103,6 @@ fundación ,...)
 ---
 
 
-## Restricciones (Supuestos Semánticos):
-Una ver recogidos todos los datos debemos tener en cuenta una serie de restricciones necesarias
-para que la base de datos tenga coherencia y no se produzcan errores:
-- Los proyectos podrán ser realizados por varios alumnos.
-- Un proyecto solo podrá tener asignado un tutor.
-- Un tutor podrá tener más de un proyecto.
-- Un alumno podrá tener sólamente un proyecto.
-- Un alumno podrá haber estudiado en distintos centros, o en el mismo centro, - varias titulaciones
-- diferentes.
-- Un alumno solo realizará las prácticas en una empresa.
-- Un alumno podrá haber trabajado en distintas empresas o en la misma varias veces.
-- Una empresa podrá acoger a varios alumnos en prácticas.
-- Una empresa podrá contratar a varios alumnos.
-- Una empresa puede dedicarse a varias actividades.
-
 ---
 
 ---
@@ -143,33 +128,25 @@ Creo las siguientes Entidades en Data Modeler:
 - Autor
 - Pago (paypal o tarjeta[entidades hijas ])
 - Cesta
+- Royalty
+- Cliente (Normales y premium [Entidades hijas])
 
 
+Una vez creadas las entidades decido añadirle otras que creí oportunas con el fin de reducir los grupos repetitivos
 
+  -  Localidad 
+      >   (Relacionada con la dirección)
+  -  Telefóno 
+      >  (Relacionado con el cliente)
+  -  Información_adicional
+        > (Relacionado con Editorial)
+ 
 # Relaciones
-> Las Tablas sin PK se las asigna el datamodeler al realizar la ingeniería al modelo relacional 
-- En una provincia puede haber varios municipios, pero cada municipio se encuentra en una única provincia. 
-
-- En un municipio pueden existir varios centros, pero cada centro solo puede estar ubicado en un municipio .
-
-- En cuanto a la relación entre alumnos y titulaciones, un alumno puede obtener una o más titulaciones y una titulación puede ser obtenida por uno o más alumnos. 
-
-- Una titulación puede ser impartida en uno o varios centros, y en un centro se pueden impartir una o varias titulaciones.
-
-- En un centro de estudios pueden trabajar uno o varios tutores, y un tutor puede estar asignado a más de un proyecto. 
-- Un proyecto puede ser realizado por uno o varios alumnos
-
-- En cuanto a la relación entre alumnos y empresas, un alumno puede tener dos tipos de relaciones:
- > - Por un lado, puede realizar las prácticas en una empresa, y en este caso solo puede realizarlas en una única empresa. 
-   En una empresa pueden estar realizando prácticas uno o más alumnos. En esta relación también se incluyeron atributos como la fecha del proyecto. 
-
-> - Por otro lado, un alumno también puede trabajar o haber trabajado en una o varias empresas, y en una empresa pueden estar trabajando uno o varios alumnos. 
-
--  una empresa está ubicada en un municipio y este a su vez en una provincia, al igual que el centro de estudios.
-- una empresa puede tener una o varias áreas, y un área puede estar representada en varias empresas.
+> Las Tablas sin PK se las asigna el datamodeler al realizar la ingeniería al modelo relacional
+ 
 
 ---
-Una vez realizado el modelo lógico debería verse tal que así: 
+Una vez realizado el modelo lógico se ve así 
 
 
 <p align="center">
@@ -698,10 +675,10 @@ GO
 
 ```` sql
 
-DROP DATABASE IF EXIST Centro_Estudios
+DROP DATABASE IF EXISTS BibliotecaOnline
 GO
-CREATE DATABASE Centro_Estudios
+CREATE DATABASE BibliotecaOnline
 GO
-USE Centro_Estudios
+USE BibliotecaOnline
 GO
 ````
