cambio de títulos

--- a/_posts/2022-01-01-PRUEBA.md
+++ b/_posts/2022-01-01-PRUEBA.md
@@ -1,3 +1,37 @@
+
+---
+layout: single
+title: Creación del proyecto Administrador De Fincas
+excerpt: "Modelo Lógico Conceptual."
+date: 2023-01-16
+classes: wide
+header:
+  teaser: /assets/images/htb-writeup-magic/magic_logo.png
+  teaser_home_page: true
+  icon: /assets/images/hackthebox.webp
+categories:
+  - Datamodeler
+  - ssms
+  - sql server
+tags:
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+  - 
+---
+
+
+
+
+
+
+
+
+
+
 # Modelo de base de datos lógico-relacional para un Administrador de fincas
 
 ## Introducción
@@ -11,6 +45,8 @@ El objetivo de este proyecto es diseñar un modelo de base de datos lógico-rela
 
 - [Modelo de base de datos lógico-relacional para un Administrador de fincas](#modelo-de-base-de-datos-lógico-relacional-para-un-administrador-de-fincas)
   - [Introducción](#introducción)
+- [Modelo Lógico Conceptual](#modelo-lógico-conceptual)
+  - [Creación de entidades](#creación-de-entidades)
     - [Propietario](#propietario)
     - [Vivienda](#vivienda)
     - [Inquilino](#inquilino)
@@ -26,18 +62,34 @@ El objetivo de este proyecto es diseñar un modelo de base de datos lógico-rela
     - [Gasto](#gasto-1)
     - [Servicio](#servicio-1)
 - [Análisis de las normas de formalización en el modelo de base de datos](#análisis-de-las-normas-de-formalización-en-el-modelo-de-base-de-datos)
-  - [Introducción](#introducción-1)
   - [Norma 1FN](#norma-1fn)
   - [Norma 2FN](#norma-2fn)
   - [Norma 3FN](#norma-3fn)
   - [Conclusiones](#conclusiones)
+
+
+# Modelo Lógico Conceptual
+## Creación de entidades
+
 ### Propietario
 
 - ID
 - Nombre
-- Apellidos
+- Apellido 1
+- Apellido 2
 - Teléfono
 - Email
+
+
+
+
+	
+
+| ID| Nombre | Apellido 1|Apellido 2|Teléfono|Email|
+|----------|----------|----------|----------|----------|----------|
+| 1   | Salvador |Candedo |Pazos |981801212|example@gmail.com|
+| 2  | Donald |Wayne | Johnson |981232341|example@yahoo.es|
+
 
 ### Vivienda
 
@@ -46,6 +98,9 @@ El objetivo de este proyecto es diseñar un modelo de base de datos lógico-rela
 - Número de habitaciones
 - Superficie
 - Precio mensual
+- 
+|
+
 
 ### Inquilino
 
@@ -143,9 +198,6 @@ A continuación se especifican los atributos de cada entidad:
 
 # Análisis de las normas de formalización en el modelo de base de datos
 
-## Introducción
-
-El objetivo de este análisis es comprobar si el modelo de base de datos lógico-relacional para un Administrador de fincas cumple las tres normas de formalización: la 1FN, la 2FN y la 3FN.
 
 ## Norma 1FN
 
