--- a/_posts/2022-01-01-Libreria.md
+++ b/_posts/2022-01-01-Libreria.md
@@ -150,7 +150,7 @@ Una vez realizado el modelo lógico se ve así
 
 
 <p align="center">
-<img src="/ProyectoBD/assets/images/centroestudios/Logical.png">
+<img src="/ProyectoBD/assets/images/libreriaOnlineBD/Logical.png">
 </p>
 
 
@@ -199,8 +199,10 @@ multivaluados.
 
 
 <p align="center">
-<img src="/ProyectoBD/assets/images/centroestudios/Relational_1.png">
+<img src="/ProyectoBD/assets/images/libreriaOnlineBD/Relational_1.png">
 </p>
+
+![](/ProyectoBD/assets/images/LibreriaOnlineBD/Relational_1.png)
 
 ---
 ### Una vez realizados el modelo Lógico Conceptual y Relacional ya solo queda generar el DLL en Data-Modeler para que podamos usarlo en nuestro smss
