--- a/_posts/2022-01-01-PRUEBA.md
+++ b/_posts/2022-01-01-PRUEBA.md
@@ -169,7 +169,7 @@ También interesa Guardar información sobre la propiedad asi cómo su tipo, si 
 - Descripción
 - Importe
 
-### Servicio
+##### Servicio
 
 - ID
 - Nombre
@@ -181,7 +181,14 @@ También interesa Guardar información sobre la propiedad asi cómo su tipo, si 
 > Las entidades sin Pk Datamodeler genera una PK autoincremental al realizar la ingeniería al modelo relacional
 
 
-Modelo Lógico:
+  ## Modelo Lógico:
+
+
+<p align="center">
+<img src="/ProyectoBD/assets/images/AdmfincasBD/Logical.png">
+</p>
+
+
 # Modelo Relacional
 
 Al generar el modelo relacional se generan dos tablas más ya que existían dos relaciones N:M
@@ -194,6 +201,13 @@ Al generar el modelo relacional se generan dos tablas más ya que existían dos 
 
 
 El resto de relaciones son 1:N por tanto las PK de las tablas del lado 1 propagarán como FK para las tablas del lado N.
+
+
+
+
+<p align="center">
+<img src="/ProyectoBD/assets/images/AdmfincasBD/Relational.png">
+</p>
 
 # Análisis de las normas de formalización en el modelo de base de datos
 
@@ -211,6 +225,11 @@ Todos los atributos dependen de la clave primaria en sus respectivas tablas
 
 no hay ningún atributo no Primario que dependa de otros
 atributos no primarios en lugar de su PK en su tabla correspondiente.
+
+
+
+
+
 
 # Crear Base de Datos Pinacoteca en SQL Server
 
