--- a/_posts/2022-01-01-PRUEBA.md
+++ b/_posts/2022-01-01-PRUEBA.md
@@ -70,14 +70,14 @@ El objetivo de este proyecto es diseñar un modelo de base de datos lógico-rela
 
 Mi empresa de administridador de fincas busca administrar las propiedades para Alquilarlas a otros inquilinos o realizarles el mantenimiento necesario.
 
-La empresa necesita administrear los datos de las propuiedades, asi como la de sus respectivos propietarios (que pueden ser empresas o individuos ) 
+La empresa necesita administrear los datos de las `propiedades,` asi como la de sus respectivos `propietarios` (que pueden ser empresas o individuos ) .
 
-si se realiza alquiler a algún cliente se necesitan saber los datos del cliente asi cómo el método de pago del mismo 
+Si se realiza alquiler a algún `cliente` se necesitan saber los datos del cliente asi cómo el método de pago del mismo 
 
 Los administradores de fincas realizan mantenimiento en las propiedades por lo que se necesita recopilar: 
-* datos sobre el mantenimiento(Descripción , Fecha de Inicio y fin...)
-* Trabajos a realizar en el mantenimiento (Descripcion,Fecha de asignación Duración ...)
-* Proveedor de servicios que administrará los trabajadores para realizar el mantenimiento (Nombre,Email,telefono...).
+* Datos sobre el `mantenimiento`(Descripción , Fecha de Inicio y fin...)
+* `Trabajos` a realizar en el mantenimiento (Descripcion,Fecha de asignación Duración ...)
+* Datos sobre el `proveedor de servicios `que administrará los trabajadores para realizar el mantenimiento (Nombre,Email,telefono...).
 
 
 También interesa Guardar información sobre la propiedad asi cómo su tipo, si tiene aparcamiento o garage, número de habitaciones,baños...
@@ -109,21 +109,32 @@ También interesa Guardar información sobre la propiedad asi cómo su tipo, si 
   - Empresa
 
 
-
+> Decidi separar los atributos de telefonos de individuo y empresas en otras tablas para evitar redundancia
 
 
 	
 
-| ID| Nombre | Apellido 1|Apellido 2|Teléfono|Email|
-|----------|----------|----------|----------|----------|----------|
-| 1   | Salvador |Candedo |Pazos |981801212|example@gmail.com|
-| 2  | Donald |Wayne | Johnson |981232341|example@yahoo.es|
+| ID_Propietario| Contacto | 
+|----------|----------|
+| 1   | Paco |
+| 2  | Starbuks |
+
+
+| Dni | Nombre | Apellido 1|Apellido 2|
+|----------|----------|----------|----------|
+| 1   | Salvador |Candedo |Pazos |
+| 2  | Donald |Wayne | Johnson |
+
+| CIF| NombreEmpresa | Numero |Sucursal |
+|----------|----------|----------|----------|
+| 1   | Starbuks |20 |Don Dolores |
+| 2  | Endesa | 32 | Santa elena Peten |
 
 
 ### Propiedad
 
 - IDpropiedad
-- 
+
 - AñoConstruccion
 - Superficie
 - Baños
@@ -136,18 +147,19 @@ También interesa Guardar información sobre la propiedad asi cómo su tipo, si 
 
 
 ### Alquiler
-
+- ID_Alquiler
 - Fecha_Inicio
 - Fecha_Fin
 - SeguroDeposito
 - Renta mensual
+- PrecioTotal
 - ID_Cliente(FK)
 - IDpropiedad(FK)
 
-| ID| Nombre | Apellido 1|Apellido2 |Teléfono| Email|
-|----------|----------|----------|----------|----------|----------|
-| 1   | Sara | Montiel  ||9819988232| example@google.com
-| 2  | Joaquin |Martinez | Sabrina |981998822| example@mySMTPserver.es
+| ID_Alquiler| Fecha_Inicio | Fecha_Fin|SeguroDeposito |Renta mensual| Email| PrecioTotal |
+|----------|----------|----------|----------|----------|----------|----------|
+| 1   | 10/10/2023| 10/10/2023|  |300 | 230 |example@yahoo.es| 
+| 2  | 10/10/2023| 10/10/2023| 450| 230 |981998822| example@yahoo.es| 
 
 ### Cliente
 
@@ -1065,7 +1077,7 @@ Modify Name = AdministradordeFincas
 Go
 
 ```
-Con la sentencia DB_NAME podemos ver si el nombre se cambió correctamente
+Con la sentencia `DB_NAME` podemos ver si el nombre se cambió correctamente
 
 ## Modificar el tamaño
 
